# identity

./: .gitignore  README.md  alembic.ini  components.d.ts  db_manager.py  main.py  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  settings.py  startbackend.bat
.github/: dependabot.yml
.github/workflows/: backend-linters.yml  frontend-linters.yml
alembic/: env.py
alembic/versions/: 3b7b3ed4c18b_init.py  d3d2441ef2ce_init.py  dda0d6b769d6_add_app_icon_url.py  f825db04f551_init_alembic.py
app/: __init__.py  instance.py  main.py
db_models/: __init__.py  base.py  code.py  oauth_app.py  user.py
frontend/: package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
frontend/src/: style.css
frontend/src/components/: FooterBar.vue
frontend/src/i18n/locales/: en.json  zh-CN.json
frontend/src/scopes/: details.d.json.ts  index.ts  types.ts
frontend/src/sensitivity/: index.ts
src/: App.vue  i18n.ts  index.ts
src/components/: PermissionCell.vue  i18n.vue
src/i18n/locales/: en.json  zh-CN.json
src/scopes/: details.json  index.ts  types.ts
src/views/: AuthorizeView.vue
src/views/authorize/: AuthorizeView.vue
utils/: __init__.py  log_handler.py  randoms.py  servers.py
