[project]
name = "identity-backend"
version = "0.1.0"
description = ""
authors = [{ name = "OpenTeens" }, { name = "mtf-im" }]
readme = "README.md"
requires-python = "<4.0, >= 3.13"
dependencies = [
    "aiosqlite>=0.20.0",
    "alembic>=1.14.0",
    "argon2-cffi>=23.1.0",
    "cryptography>=43.0.3",
    "fastapi>=0.115.4",
    "pycryptodome>=3.21.0",
    "pydantic-settings>=2.6.1",
    "pyjwt>=2.9.0",
    "pyright>=1.1.400",
    "python-multipart>=0.0.17",
    "pyyaml>=6.0.2",
    "rich>=13.9.4",
    "ruff>=0.7.2",
    "sqlalchemy>=2.0.36",
    "uvicorn>=0.32.0",
]

[tool.poetry]
package-mode = false

[tool.ruff]
preview = true
extend-exclude = ["alembic/versions/**"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "B",
    "SIM",
    "I",
    "UP",
    "RUF",
    "C90",
    "N",
    "ANN",
    "FA",
    "A",
    "C4",
    "DTZ",
    "ICN",
    "ISC",
    "LOG",
    "INP",
    "PIE",
    "Q",
    "RET",
    "SLF",
    "SIM",
    "TID",
    "PTH",
    "TD",
    "ERA",
    "PL",
    "FAST",
    "FLY",
    "PERF",
    "FURB",
    "ASYNC",
]

ignore = [
    "W191",
    "E117",
    "E111",
    "E114",
    "D206",
    "D300",
    "Q000",
    "Q001",
    "Q002",
    "Q003",
    "COM812",
    "COM819",
    "ISC001",
    "ISC002",
    "E501",
    "E701",
    "E203",
    "D202",
    "D203",
    "D213",
    "PLR0913",
    "PLR0917",
    "ERA001",
]

[tool.pyright]
exclude = ["alembic/versions/**", "**/node_modules", "**/.venv"]
