[project]
name = "identity-backend"
version = "0.1.0"
description = ""
authors = [{ name = "OpenTeens" }, { name = "mtf-im" }]
readme = "README.md"
requires-python = "<4.0, >= 3.13"
dependencies = [
    "aiosqlite>=0.20.0",
    "alembic>=1.14.0",
    "argon2-cffi>=23.1.0",
    "cryptography>=43.0.3",
    "fastapi>=0.115.4",
    "pycryptodome>=3.21.0",
    "pydantic-settings>=2.6.1",
    "pyjwt>=2.9.0",
    "pyright>=1.1.400",
    "python-multipart>=0.0.17",
    "pyyaml>=6.0.2",
    "rich>=13.9.4",
    "ruff>=0.7.2",
    "sqlalchemy>=2.0.36",
    "taskipy>=1.14.1",
    "uvicorn>=0.32.0",
]

[tool.ruff]
preview = true
extend-exclude = ["alembic/versions/**"]

[tool.ruff.lint]
select = [
    "A",
    "ANN",
    "ASYNC",
    "B",
    "C4",
    "C90",
    "DTZ",
    "E",
    "ERA",
    "F",
    "FA",
    "FAST",
    "FLY",
    "FURB",
    "I",
    "ICN",
    "INP",
    "ISC",
    "LOG",
    "N",
    "PERF",
    "PIE",
    "PL",
    "PTH",
    "Q",
    "RET",
    "RUF",
    "SIM",
    "SIM",
    "SLF",
    "TD",
    "TID",
    "TRY",
    "UP",
]

ignore = [
    "COM812",
    "COM819",
    "D202",
    "D203",
    "D206",
    "D213",
    "D300",
    "E111",
    "E114",
    "E117",
    "E203",
    "E501",
    "E701",
    "ERA001",
    "ISC001",
    "ISC002",
    "PLC0414",
    "PLR0913",
    "PLR0917",
    "Q000",
    "Q001",
    "Q002",
    "Q003",
    "W191",
]

[tool.pyright]
exclude = ["alembic/versions/**", "**/node_modules", "**/.venv"]

[tool.taskipy.tasks]
dev = "uvicorn app:app --port 35271 --reload"
serve = 'uvicorn app:app --host 0.0.0.0 --port 80 --proxy-headers --forwarded-allow-ips "127.0.0.1/8, ::1/128"'
