[project]
name = "identity-backend"
version = "0.1.0"
description = ""
authors = [{ name = "OpenTeens" }, { name = "mtf-im" }]
readme = "README.md"
requires-python = "<4.0, >= 3.13"
dependencies = [
    "aiosqlite>=0.20.0",
    "alembic>=1.14.0",
    "argon2-cffi>=23.1.0",
    "cryptography>=43.0.3",
    "fastapi>=0.115.4",
    "pycryptodomex>=3.22.0",
    "pydantic-settings>=2.6.1",
    "pyjwt>=2.9.0",
    "pyright>=1.1.400",
    "python-multipart>=0.0.17",
    "pyyaml>=6.0.2",
    "rich>=13.9.4",
    "ruff>=0.7.2",
    "sqlalchemy>=2.0.36",
    "taskipy>=1.14.1",
    "uvicorn>=0.32.0",
]

[tool.ruff]
preview = true
extend-exclude = ["alembic/versions/**"]

[tool.ruff.lint]
select = [
    "A",
    "ANN",
    "ASYNC",
    "B",
    "BLE",   # flake8-blind-except
    "C4",
    "C90",
    "DTZ",   # flake8-datetimez
    "E",
    "ERA",
    "F",
    "FA",
    "FAST",
    "FLY",
    "FURB",
    "G",     # flake8-logging-format
    "I",
    "ICN",
    "INP",
    "ISC",
    "LOG",
    "N",
    "PD",
    "PERF",
    "PIE",
    "PL",
    "PTH",
    "Q",
    "RET",
    "RSE",   # flake8-raise
    "RUF",
    "S",     # flake8-bandit
    "SIM",
    "SLF",
    "TD",
    "TID",
    "TRY",
    "UP",
    "YTT",   # flake8-2020
]

ignore = [
    # Conflicts with formatter (https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules)
    "COM812",
    "COM819",
    "D206",
    "D300",
    "E111",
    "E114",
    "E117",
    "Q000",
    "Q001",
    "Q002",
    "Q003",
    "W191",
    "ISC002",
    "E501",   # Line too long; ignored because occasional overflow is acceptable

    "D203",    # No incorrect blank line before class; conflicts with D211, and `google`, `numpy` and `pep257` are more common
    "D213",    # Docstring summary line should at the 2nd line; conflicts with D212, and I'd like to start docstring summary should  at the first line
    "ERA001",  # No commented-out code; but it's annoying 
    "PLC0414", # No useless import alias; conflicts with Re-export, eg. F401
    "PLR0913", # Too many arguments; annoying when using FastAPI
    "PLR0917", # Too many positional arguments; annoying when using FastAPI
]

[tool.pyright]
exclude = ["alembic/versions/**", "**/node_modules", "**/.venv"]

[tool.taskipy.tasks]
dev = "uvicorn app.main:app --port 35271 --reload"
serve = 'uvicorn app.main:app --host 0.0.0.0 --port 80 --proxy-headers --forwarded-allow-ips "127.0.0.1/8, ::1/128"'
